force-app/main/default/objects/Contract/fields/AccountOpeningDate__c.field-meta.xml
<CustomField>
    <fullName>AccountOpeningDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Apertura De Cuenta</label>
    <type>Date</type>
</CustomField>