force-app/main/default/objects/Contract/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo De Cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>