force-app/main/default/objects/Contract/fields/AmountOfOperation__c.field-meta.xml
<CustomField>
    <fullName>AmountOfOperation__c</fullName>
    <label>Monto_Operacion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>