force-app/main/default/objects/Contract/fields/Aportaciones_Actual__c.field-meta.xml
<CustomField>
    <fullName>Aportaciones_Actual__c</fullName>
    <label>Aportaciones Año Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>