force-app/main/default/objects/Contract/fields/Aportaciones_Pasado__c.field-meta.xml
<CustomField>
    <fullName>Aportaciones_Pasado__c</fullName>
    <label>Aportaciones Año Pasado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>