force-app/main/default/objects/Contract/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Aprobación</label>
    <type>Date</type>
</CustomField>