force-app/main/default/objects/Contract/fields/AREA_NEG_CONTRATO__c.field-meta.xml
<CustomField>
    <fullName>AREA_NEG_CONTRATO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AREA_NEG_CONTRATO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>