force-app/main/default/objects/Contract/fields/BAJA_LOGICA__c.field-meta.xml
<CustomField>
    <fullName>BAJA_LOGICA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BAJA_LOGICA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>