force-app/main/default/objects/Contract/fields/BalanceCB__c.field-meta.xml
<CustomField>
    <fullName>BalanceCB__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tenencia Cb</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>