force-app/main/default/objects/Contract/fields/Branch_Unit__c.field-meta.xml
<CustomField>
    <fullName>Branch_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oficina Asignada</description>
    <label>Branch Unit</label>
    <referenceTo>BranchUnit</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>