force-app/main/default/objects/Contract/fields/BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnit__c</fullName>
    <label>Unidad De Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Casa de Bolsa</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Banco</label>
            </value>
            <value>
                <fullName>CASA DE BOLSA</fullName>
                <isActive>false</isActive>
                <label>CASA DE BOLSA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>