force-app/main/default/objects/Contract/fields/BusinessUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NUM_UNIDAD_NEGOCIO_PK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>