force-app/main/default/objects/Contract/fields/CHR_GoogleAds_FECHA_PRIMER_DEPOSITO__c.field-meta.xml
<CustomField>
    <fullName>CHR_GoogleAds_FECHA_PRIMER_DEPOSITO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Primer Depósito</label>
    <type>Date</type>
</CustomField>