force-app/main/default/objects/Contract/fields/CHR_GoogleAds_MONTO_PRIMER_DEPOSITO__c.field-meta.xml
<CustomField>
    <fullName>CHR_GoogleAds_MONTO_PRIMER_DEPOSITO__c</fullName>
    <label>Monto Primer Depósito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>