force-app/main/default/objects/Contract/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ID Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>