force-app/main/default/objects/Contract/fields/ContractNumber_ID__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ContractNumber_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>