force-app/main/default/objects/Contract/fields/Cotitulares__c.field-meta.xml
<CustomField>
    <fullName>Cotitulares__c</fullName>
    <description>Muestra el nombre de los cotitulares que tiene asociados al contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cotitulares</label>
    <length>255</length>
    <type>Text</type>
</CustomField>