force-app/main/default/objects/Contract/fields/CurrentTotalPosition__c.field-meta.xml
<CustomField>
    <fullName>CurrentTotalPosition__c</fullName>
    <label>Posición Total Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>