force-app/main/default/objects/Contract/fields/DepositDate__c.field-meta.xml
<CustomField>
    <fullName>DepositDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Fondeo</label>
    <type>Date</type>
</CustomField>