force-app/main/default/objects/Contract/fields/DESC_CONTRATO__c.field-meta.xml
<CustomField>
    <fullName>DESC_CONTRATO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DESC_CONTRATO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>