force-app/main/default/objects/Contract/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Correo Electrónico</label>
    <type>Email</type>
</CustomField>