force-app/main/default/objects/Contract/fields/Entry__c.field-meta.xml
<CustomField>
    <fullName>Entry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ingreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>