force-app/main/default/objects/Contract/fields/Estatus_TDD__c.field-meta.xml
<CustomField>
    <fullName>Estatus_TDD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estatus TDD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>