force-app/main/default/objects/Contract/fields/F3_Actividad_Econmica__c.field-meta.xml
<CustomField>
    <fullName>F3_Actividad_Econmica__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actividad Económica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>