force-app/main/default/objects/Contract/fields/f3_diferencias_dia_anterior__c.field-meta.xml
<CustomField>
    <fullName>f3_diferencias_dia_anterior__c</fullName>
    <formula>((Saldo_contrato__c-F3_Posicion_dia_anterior__c)/F3_Posicion_dia_anterior__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Diferencia día anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>