force-app/main/default/objects/Contract/fields/F3_Division__c.field-meta.xml
<CustomField>
    <fullName>F3_Division__c</fullName>
    <formula>Owner.F3_Division__c</formula>
    <label>División</label>
    <type>Text</type>
</CustomField>