force-app/main/default/objects/Contract/fields/F3_Frecuencia__c.field-meta.xml
<CustomField>
    <fullName>F3_Frecuencia__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Frecuencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>