force-app/main/default/objects/Contract/fields/F3_Monto_de_diferencia_dia_anterior__c.field-meta.xml
<CustomField>
    <fullName>F3_Monto_de_diferencia_dia_anterior__c</fullName>
    <formula>Saldo_contrato__c - F3_Posicion_dia_anterior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto de diferencia día anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>