force-app/main/default/objects/Contract/fields/F3_Posicion_dia_anterior__c.field-meta.xml
<CustomField>
    <fullName>F3_Posicion_dia_anterior__c</fullName>
    <label>Posición día anterior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>