force-app/main/default/objects/Contract/fields/F3_Posicion_Maxima_Historica__c.field-meta.xml
<CustomField>
    <fullName>F3_Posicion_Maxima_Historica__c</fullName>
    <label>Posición Máxima Histórica</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>