force-app/main/default/objects/Contract/fields/F3_Posicion_Maxima_y_Actual__c.field-meta.xml
<CustomField>
    <fullName>F3_Posicion_Maxima_y_Actual__c</fullName>
    <formula>((Saldo_contrato__c-F3_Posicion_Maxima_Historica__c)/F3_Posicion_Maxima_Historica__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Posición Máxima y Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>