force-app/main/default/objects/Contract/fields/F3_prospecto_origen__c.field-meta.xml
<CustomField>
    <fullName>F3_prospecto_origen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospecto Origen</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>