force-app/main/default/objects/Contract/fields/F3_Region__c.field-meta.xml
<CustomField>
    <fullName>F3_Region__c</fullName>
    <formula>Owner.F3_Region__c</formula>
    <label>Región</label>
    <type>Text</type>
</CustomField>