force-app/main/default/objects/Contract/fields/F3_Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>F3_Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad Origen</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>