force-app/main/default/objects/Contract/fields/F3_Subtipo_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>F3_Subtipo_de_Contrato__c</fullName>
    <label>Subtipo de Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TypeOfContract__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>NORMAL</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>SINDICATOS</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>OTRAS ENTIDADES FINANCIERAS</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>FIDEICOMISO PER MOR</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>DISTRIBUIDORES</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>FONDO AH SERIE PF</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>BANCO</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>ADMINISTRATIVO</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>PARAESTATAL</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>GOBIERNO</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>NO CONTRIBUYENTES</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>FIDEICOMISO PER FIS</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>FONDOS DE PENSIONES</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>INSTIT SEG Y FIANZAS</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>ALMACENES GRALES DE DEPOSITO</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>UNIONES DE CREDITO</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>ARRENDADORAS FINANCIERAS</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>EMPRESAS FACTORAJE FINANCIERO</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>EMPLEADO ACTINVER</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>FONDO AH SERIE PM</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>CAJA AH SERIE PM</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>CAJA AH SERIE PF</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>ACTINVER FIDEICOMISO PER MOR</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>ACTINVER FIDEICOMISO PER FIS</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>CAJA AH-PF POR CTA3EROS</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>NO CONTRIB SERIE E</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>CIAS SEGUROS DE PENSIONES</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>SIEFORE</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>GOBIERNO SERIE E</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>FAMILAR ACTINVER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>