force-app/main/default/objects/Contract/fields/Fecha_de_Rendimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Rendimiento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de Rendimiento</label>
    <type>Date</type>
</CustomField>