force-app/main/default/objects/Contract/fields/Fecha_ultimo_deposito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ultimo_deposito__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de último depósito</label>
    <type>Date</type>
</CustomField>