force-app/main/default/objects/Contract/fields/Firma_del_contrato__c.field-meta.xml
<CustomField>
    <fullName>Firma_del_contrato__c</fullName>
    <description>Muestra el tipo de firma de Contrato: Solidaria/Individual/Mancomunada</description>
    <label>Firma del contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Mancomunada</fullName>
            </value>
            <value>
                <fullName>Solidaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>