force-app/main/default/objects/Contract/fields/FirmaContrato__c.field-meta.xml
<CustomField>
    <fullName>FirmaContrato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Firma del contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>