force-app/main/default/objects/Contract/fields/FLAG_DATOS_TERCEROS__c.field-meta.xml
<CustomField>
    <fullName>FLAG_DATOS_TERCEROS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Datos Terceros</label>
    <length>2</length>
    <type>Text</type>
</CustomField>