force-app/main/default/objects/Contract/fields/FLAG_EVENTS_INVITATIONS__c.field-meta.xml
<CustomField>
    <fullName>FLAG_EVENTS_INVITATIONS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invitación Eventos</label>
    <length>2</length>
    <type>Text</type>
</CustomField>