force-app/main/default/objects/Contract/fields/FLAG_MARKETING__c.field-meta.xml
<CustomField>
    <fullName>FLAG_MARKETING__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mercadeo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>