force-app/main/default/objects/Contract/fields/FLAG_OFF_COMER_MERCA__c.field-meta.xml
<CustomField>
    <fullName>FLAG_OFF_COMER_MERCA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Of_Comer_Merca</label>
    <length>2</length>
    <type>Text</type>
</CustomField>