force-app/main/default/objects/Contract/fields/FLAG_OFT_COMER_PRIVACIDAD__c.field-meta.xml
<CustomField>
    <fullName>FLAG_OFT_COMER_PRIVACIDAD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Of_Comer_Privacidad</label>
    <length>2</length>
    <type>Text</type>
</CustomField>