force-app/main/default/objects/Contract/fields/FLAG_PERSONAL_SENSITIVE_DATA__c.field-meta.xml
<CustomField>
    <fullName>FLAG_PERSONAL_SENSITIVE_DATA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Datos Personales Sensibles</label>
    <length>2</length>
    <type>Text</type>
</CustomField>