force-app/main/default/objects/Contract/fields/FLAG_RECREATIVE_ACTIVITIES__c.field-meta.xml
<CustomField>
    <fullName>FLAG_RECREATIVE_ACTIVITIES__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Actividades Recreativas</label>
    <length>2</length>
    <type>Text</type>
</CustomField>