force-app/main/default/objects/Contract/fields/FWY_Saldo_Number__c.field-meta.xml
<CustomField>
    <fullName>FWY_Saldo_Number__c</fullName>
    <formula>IF(
    NOT(
        OR(
            ISPICKVAL(TypeOfContract__c, &quot;10&quot;),
            ISPICKVAL(TypeOfContract__c, &quot;12&quot;),
            ISPICKVAL(TypeOfContract__c, &quot;13&quot;),
            ISPICKVAL(TypeOfContract__c, &quot;14&quot;)
        )
    ),
    VALUE(Saldo__c),
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>