force-app/main/default/objects/Contract/fields/ID_ASESOR__c.field-meta.xml
<CustomField>
    <fullName>ID_ASESOR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Asesor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>