force-app/main/default/objects/Contract/fields/Id_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Id_Cliente__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>