force-app/main/default/objects/Contract/fields/IDSap__c.field-meta.xml
<CustomField>
    <fullName>IDSap__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Número de Contrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>