force-app/main/default/objects/Contract/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Emisora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>