force-app/main/default/objects/Contract/fields/Language_Statement__c.field-meta.xml
<CustomField>
    <fullName>Language_Statement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Idioma Estado Cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>