force-app/main/default/objects/Contract/fields/LastMovement__c.field-meta.xml
<CustomField>
    <fullName>LastMovement__c</fullName>
    <label>Ultimo Movimiento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>