force-app/main/default/objects/Contract/fields/LastStatusDate__c.field-meta.xml
<CustomField>
    <fullName>LastStatusDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de último estatus</label>
    <type>Date</type>
</CustomField>