force-app/main/default/objects/Contract/fields/LastStatusMotive__c.field-meta.xml
<CustomField>
    <fullName>LastStatusMotive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Motivo de último estatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>