force-app/main/default/objects/Contract/fields/MeansOfDataCollection__c.field-meta.xml
<CustomField>
    <fullName>MeansOfDataCollection__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medio De Captación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>