force-app/main/default/objects/Contract/fields/NUM_CLIENTE_MKT__c.field-meta.xml
<CustomField>
    <fullName>NUM_CLIENTE_MKT__c</fullName>
    <formula>Account.Client_ID__c</formula>
    <label>NUM CLIENTE MKT</label>
    <type>Text</type>
</CustomField>