force-app/main/default/objects/Contract/fields/OPENING_CHANNEL__c.field-meta.xml
<CustomField>
    <fullName>OPENING_CHANNEL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CANAL_APERTURA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>