force-app/main/default/objects/Contract/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>