force-app/main/default/objects/Contract/fields/PatrimIDContratoLink__c.field-meta.xml
<CustomField>
    <fullName>PatrimIDContratoLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;    Id, ContractNumber__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Contrato link</label>
    <type>Text</type>
</CustomField>