force-app/main/default/objects/Contract/fields/PendingSettlement__c.field-meta.xml
<CustomField>
    <fullName>PendingSettlement__c</fullName>
    <label>Pendiente Por Liquidar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>