force-app/main/default/objects/Contract/fields/Perfil_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Perfil_del_Cliente__c</fullName>
    <label>Perfil del Cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>