force-app/main/default/objects/Contract/fields/PlaneacionFinancieraCompletada__c.field-meta.xml
<CustomField>
    <fullName>PlaneacionFinancieraCompletada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Planeación financiera completada</label>
    <type>Checkbox</type>
</CustomField>