force-app/main/default/objects/Contract/fields/PositionInFunds__c.field-meta.xml
<CustomField>
    <fullName>PositionInFunds__c</fullName>
    <label>Posición en fondos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>