force-app/main/default/objects/Contract/fields/Prenote__c.field-meta.xml
<CustomField>
    <fullName>Prenote__c</fullName>
    <label>Prenota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>