force-app/main/default/objects/Contract/fields/Probabilidad_CHURN__c.field-meta.xml
<CustomField>
    <fullName>Probabilidad_CHURN__c</fullName>
    <label>Probabilidad CHURN</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>