force-app/main/default/objects/Contract/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Productos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CUENTA EJE</fullName>
            </value>
            <value>
                <fullName>FONDOS DE DEUDA</fullName>
            </value>
            <value>
                <fullName>PENDIENTE POR LIQUIDAR</fullName>
            </value>
            <value>
                <fullName>RENTA VARIABLE</fullName>
            </value>
            <value>
                <fullName>FONDOS DE COBERTURA</fullName>
            </value>
            <value>
                <fullName>MERCADO DE CAPITALES</fullName>
            </value>
            <value>
                <fullName>EFECTIVO</fullName>
            </value>
            <value>
                <fullName>FONDO DE FONDOS</fullName>
            </value>
            <value>
                <fullName>MERCADO DE DINERO REPORTO</fullName>
            </value>
            <value>
                <fullName>MERCADO DE DINERO DIRECTO</fullName>
            </value>
            <value>
                <fullName>PAGARE BURSATIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>