force-app/main/default/objects/Contract/fields/PropuestaInversionCompletada__c.field-meta.xml
<CustomField>
    <fullName>PropuestaInversionCompletada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Propuesta de inversión completada</label>
    <type>Checkbox</type>
</CustomField>