force-app/main/default/objects/Contract/fields/QuickOpening__c.field-meta.xml
<CustomField>
    <fullName>QuickOpening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apertura Rapida</label>
    <type>Checkbox</type>
</CustomField>