force-app/main/default/objects/Contract/fields/Rendimiento_Bruto__c.field-meta.xml
<CustomField>
    <fullName>Rendimiento_Bruto__c</fullName>
    <label>Rendimiento Bruto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>