force-app/main/default/objects/Contract/fields/Rendimiento_Neto__c.field-meta.xml
<CustomField>
    <fullName>Rendimiento_Neto__c</fullName>
    <label>Rendimiento Neto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>