force-app/main/default/objects/Contract/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <description>Saldo del contrato</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Saldo</label>
    <length>36</length>
    <type>Text</type>
</CustomField>