force-app/main/default/objects/Contract/fields/Saldo_contrato__c.field-meta.xml
<CustomField>
    <fullName>Saldo_contrato__c</fullName>
    <formula>Value(Saldo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo del contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>