force-app/main/default/objects/Contract/fields/SAPStatus__c.field-meta.xml
<CustomField>
    <fullName>SAPStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estatus Sap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>