force-app/main/default/objects/Contract/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Serie</label>
    <length>255</length>
    <type>Text</type>
</CustomField>