force-app/main/default/objects/Contract/fields/SNAPSHOT_DATE__c.field-meta.xml
<CustomField>
    <fullName>SNAPSHOT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SNAPSHOT_DATE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>