force-app/main/default/objects/Contract/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contrato de Banco</fullName>
            </value>
            <value>
                <fullName>Casa de Bolsa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>