force-app/main/default/objects/Contract/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>En proceso de validación</fullName>
            </value>
            <value>
                <fullName>C01</fullName>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>C02</fullName>
                <label>Cancelado</label>
            </value>
            <value>
                <fullName>C03</fullName>
                <label>Cerrado</label>
            </value>
            <value>
                <fullName>C05</fullName>
                <label>Aprobado</label>
            </value>
            <value>
                <fullName>C06</fullName>
                <label>Bloqueado</label>
            </value>
            <value>
                <fullName>CC01</fullName>
                <label>Nuevo.</label>
            </value>
            <value>
                <fullName>CC02</fullName>
                <label>Cancelado.</label>
            </value>
            <value>
                <fullName>CC05</fullName>
                <label>Aprobado.</label>
            </value>
            <value>
                <fullName>CC06</fullName>
                <label>Bloqueado.</label>
            </value>
            <value>
                <fullName>CC07</fullName>
                <label>Registrado Bursanet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>