force-app/main/default/objects/Contract/fields/StatusOfRequest__c.field-meta.xml
<CustomField>
    <fullName>StatusOfRequest__c</fullName>
    <label>Estatus Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En proceso de validación</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Fondeado</fullName>
            </value>
            <value>
                <fullName>Bloqueado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>