force-app/main/default/objects/Contract/fields/Tenencia_Bco__c.field-meta.xml
<CustomField>
    <fullName>Tenencia_Bco__c</fullName>
    <label>Tenencia Bco</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>