force-app/main/default/objects/Contract/fields/ThirdPartyData__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Datos Terceros</label>
    <type>Checkbox</type>
</CustomField>