force-app/main/default/objects/Contract/fields/TotalBalance__c.field-meta.xml
<CustomField>
    <fullName>TotalBalance__c</fullName>
    <label>Tenencia Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>